--- a/c-support/doc/c-hotkeys.tex
+++ b/c-support/doc/c-hotkeys.tex
@@ -10,24 +10,26 @@
 %%    Copyright:  Copyright (C)  2006  Dr.-Ing. Fritz Mehner  (mehner@fh-swf.de)
 %%      Version:  1.0
 %%      Created:  10.11.2006
-%%     Revision:  $Id: c-hotkeys.tex,v 1.17 2008/11/09 12:19:45 mehner Exp $
+%%     Revision:  $Id: c-hotkeys.tex,v 1.28 2009/10/21 18:15:25 mehner Exp $
 %%                
 %%        Notes:  
 %%                
 %%=====================================================================================
 
-\documentclass[oneside,10pt,a4paper,DIV24]{scrartcl}
+\documentclass[oneside,11pt,landscape,DIV16]{scrartcl}
 
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{times}
 \usepackage{lastpage}
+\usepackage{multicol}
+\usepackage{setspace}
 
 \setlength\parindent{0pt}
 
-\newcommand{\Pluginversion}{5.3}
-\newcommand{\ReleaseDate}{November 2008}
+\newcommand{\Pluginversion}{5.9}
+\newcommand{\ReleaseDate}{ October 2009}
 
 %%----------------------------------------------------------------------
 %%  luximono : Type1-font
@@ -41,7 +43,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancyplain}
 \fancyfoot[L]{\small \ReleaseDate}
-\fancyfoot[C]{}
+\fancyfoot[C]{c-support.vim}
 \fancyfoot[R]{\small \textbf{Page \thepage{} / \pageref{LastPage}}}
 \renewcommand{\headrulewidth}{0.0pt}
 
@@ -58,7 +60,8 @@
 %%  START OF DOCUMENT
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
-\twocolumn
+
+\begin{multicols}{3}
 %
 %%======================================================================
 %%  title
@@ -69,43 +72,50 @@
 \textbf{\textsc{\small{Version \Pluginversion}}}\\
 \textbf{\textsc{\Huge{Hot keys}}}\\ 
 Key mappings for Vim with and without GUI.\\
-%Plugin: http://vim.sourceforge.net\\
-%\vspace{2.0mm}
+Plugin: http://vim.sourceforge.net\\
+\vspace{3.0mm}
 {\normalsize (i)} insert mode, {\normalsize (n)} normal mode, {\normalsize (v)} visual mode\\
-%\vspace{1.0mm}
+\vspace{5.0mm}
 %
 %%======================================================================
 %%  table, left part
 %%======================================================================
 %%~~~~~ TABULAR : begin ~~~~~~~~~~
-\begin{tabular}[]{|p{14mm}|p{58mm}|}
-%%----------------------------------------------------------------------
-%%  show plugin help
-%%----------------------------------------------------------------------
-%\hline 
-%\multicolumn{2}{|r|}{\textsl{\textbf{H}elp}}\\
-\hline \verb'\hm'   & show manual   \hfill (n,i)\\
-\hline \verb'\hp'   & help (plugin) \hfill (n,i)\\
-\hline 
-%%----------------------------------------------------------------------
-%%  menu comments
-%%----------------------------------------------------------------------
+\begin{tabular}[]{|p{10mm}|p{60mm}|}
+%
 \hline
 \multicolumn{2}{|r|}{\textsl{\textbf{C}omments}} \\
-\hline \verb'\cl' & end-of-line comment                     \hfill (n,v,i)\\
-\hline \verb'\cj' & adjust end-of-line comment              \hfill (n,v,i)\\
-\hline \verb'\cs' & set end-of-line comment column          \hfill (n)    \\
-\hline \verb'\c*' & code $\Rightarrow$ comment \verb'/* */' \hfill (n,v)  \\
-\hline \verb'\c/ \cc' & code $\Rightarrow$ comment \verb'//'\hfill (n,v)  \\
-\hline \verb'\co' & comment $\Rightarrow$ code              \hfill (n,v)  \\
+\hline \verb'\cl'  & end-of-line comment                     \hfill (n,v,i)\\
+\hline \verb'\cj'  & adjust end-of-line comment              \hfill (n,v,i)\\
+\hline \verb'\cs'  & set end-of-line comment column          \hfill (n)    \\
+\hline \verb'\c*'  & code $\Rightarrow$ comment \verb'/* */' \hfill (n,v)  \\
+\hline \verb'\cc'  & code $\Rightarrow$ comment \verb'//'    \hfill (n,v)  \\
+\hline \verb'\co'  & comment $\Rightarrow$ code              \hfill (n,v)  \\
 
-\hline \verb'\cfr'& frame comment                           \hfill (n,i)\\
-\hline \verb'\cfu'& function comment                        \hfill (n,i)\\
-\hline \verb'\cme'& method description                      \hfill (n,i)\\
-\hline \verb'\ccl'& class description                       \hfill (n,i)\\
-\hline \verb'\cd' & date                                    \hfill (n,i)\\
-\hline \verb'\ct' & date \& time                            \hfill (n,i)\\
+\hline \verb'\cfr' & frame comment                           \hfill (n,i)\\
+\hline \verb'\cfu' & function comment                        \hfill (n,i)\\
+\hline \verb'\cme' & method description                      \hfill (n,i)\\
+\hline \verb'\ccl' & class description                       \hfill (n,i)\\
+\hline \verb'\cfdi'& file description (implementation)       \hfill (n,i)\\
+\hline \verb'\cfdh'& file description (header)               \hfill (n,i)\\
+
+\hline \verb'\ccs'& C/C++--file sections\hspace{3mm}\footnotesize{(tab compl.)}    \hfill \normalsize{(n,i)}\\
+\hline \verb'\chs'& H--file sections\hspace{10mm}\footnotesize{(tab compl.)}       \hfill \normalsize{(n,i)}\\
+\hline \verb'\ckc'& keyword comment\hspace{5mm}\footnotesize{(tab compl.)}         \hfill \normalsize{(n,i)}\\
+\hline \verb'\csc'& special comment\hspace{7,5mm}\footnotesize{(tab compl.)}       \hfill \normalsize{(n,i)}\\
+
+\hline \verb'\cd' & date                                    \hfill (n,v,i)\\
+\hline \verb'\ct' & date \& time                            \hfill (n,v,i)\\
 \hline 
+\end{tabular}\\
+%%~~~~~ TABULAR :  end  ~~~~~~~~~~
+%
+%%======================================================================
+%%  table, middle part
+%%======================================================================
+%
+%%~~~~~ TABULAR : begin ~~~~~~~~~~
+\begin{tabular}[]{|p{15mm}|p{55mm}|}
 %%----------------------------------------------------------------------
 %%  menu statements
 %%----------------------------------------------------------------------
@@ -118,17 +128,20 @@ Key mappings for Vim with and without GUI.\\
 \hline \verb'\sif' & \verb'if { }'              \hfill (n,v,i)\\
 \hline \verb'\sie' & \verb'if else'             \hfill (n,v,i)\\
 \hline \verb'\sife'& \verb'if { } else { }'     \hfill (n,v,i)\\
+\hline \verb'\se'  & \verb'else { }'            \hfill (n,v,i)\\
 \hline \verb'\sw'  & \verb'while'               \hfill (n,i)\\
 \hline \verb'\swh' & \verb'while { }'           \hfill (n,v,i)\\
 \hline \verb'\ss'  & \verb'switch'              \hfill (n,v,i)\\
 \hline \verb'\sc'  & \verb'case'                \hfill (n,i)\\
-\hline \verb'\s{'  & \verb'{ }'                 \hfill (n,v,i)\\
+\hline \verb'\s{ \sb'  & \verb'{ }'             \hfill (n,v,i)\\
 \hline
 %%----------------------------------------------------------------------
 %%  preprocessor menu
 %%----------------------------------------------------------------------
 \hline
 \multicolumn{2}{|r|}{\textsl{\textbf{P}reprocessor}}   \\
+\hline \verb'\ps'   & choose a Std. Lib. include    \hfill (n,i)\\
+\hline \verb'\pc'   & choose a C99 include         \hfill (n,i)\\
 \hline \verb'\p<'   & \verb$#include<...>$         \hfill (n,i)\\
 \hline \verb'\p"'   & \verb$#include"..."$         \hfill (n,i)\\
 \hline \verb'\pd'   & \verb'#define'               \hfill (n,i)\\
@@ -143,6 +156,15 @@ Key mappings for Vim with and without GUI.\\
 \hline \verb'\pl'   & \verb'#line  '               \hfill (n,i)\\
 \hline \verb'\pp'   & \verb'#pragma'               \hfill (n,i)\\
 \hline
+\end{tabular} \\
+%%~~~~~ TABULAR :  end  ~~~~~~~~~~
+
+%%======================================================================
+%%  table, right part
+%%======================================================================
+%
+%%~~~~~ TABULAR : begin ~~~~~~~~~~
+\begin{tabular}[]{|p{11mm}|p{60mm}|}
 %%----------------------------------------------------------------------
 %%  snippet menu
 %%----------------------------------------------------------------------
@@ -158,23 +180,8 @@ Key mappings for Vim with and without GUI.\\
 %
 \hline \verb'\ntl' & edit local templates      \hfill (n)\\
 \hline \verb'\ntg' & edit global templates     \hfill (n)\\
-\hline \verb'\ntr' & rebuild templates         \hfill (n)\\
+\hline \verb'\ntr' & reread the templates      \hfill (n)\\
 \hline
-\end{tabular} \\
-%%~~~~~ TABULAR :  end  ~~~~~~~~~~
-
-\newpage 
-%%======================================================================
-%%  table, right part
-%%======================================================================
-%%~~~~~ TABULAR : begin ~~~~~~~~~~
-\begin{tabular}[]{l}
-   \\ [1.0ex]               %% offset
-\end{tabular} \\ 
-%%~~~~~ TABULAR :  end  ~~~~~~~~~~
-%
-%%~~~~~ TABULAR : begin ~~~~~~~~~~
-\begin{tabular}[]{|p{14mm}|p{58mm}|}
 %%----------------------------------------------------------------------
 %%  idioms menu
 %%----------------------------------------------------------------------
@@ -197,32 +204,37 @@ Key mappings for Vim with and without GUI.\\
 \hline \verb'\ii'  & open input file                  \hfill (n,v,i)\\
 \hline \verb'\io'  & open output file                 \hfill (n,v,i)\\
 \hline
+\end{tabular}\\
+%
+%%======================================================================
+%%  table, right part
+%%======================================================================
+%
+%%~~~~~ TABULAR : begin ~~~~~~~~~~
+\begin{tabular}[]{|p{12mm}|p{62mm}|}
 %%----------------------------------------------------------------------
 %%  C++ menu
 %%----------------------------------------------------------------------
 \hline 
 \multicolumn{2}{|r|}{\textsl{C\textbf{+}+}} \\
-\hline \verb'\+c'  & class                                    \hfill (n,i)\\
-\hline \verb'\+cn' & class (using \verb'new')                 \hfill (n,i)\\
-\hline 
-\hline \verb'\+ci'  & class  implementation             			\hfill (n,i)\\
+\hline \verb'\+co'  & \verb'cout << << endl; '                \hfill (n,i)\\
+\hline \verb'\+c'   & class                                   \hfill (n,i)\\
+\hline \verb'\+cn'  & class (using \verb'new')                \hfill (n,i)\\
+\hline \verb'\+ci'  & class  implementation                   \hfill (n,i)\\
 \hline \verb'\+cni' & class (using \verb'new') implementation \hfill (n,i)\\
-\hline \verb'\+mi'  & method implementation             			\hfill (n,i)\\
-\hline \verb'\+ai'  & accessor implementation            			\hfill (n,i)\\
-\hline 
-\hline \verb'\+tc' & template class                           \hfill (n,i)\\
-\hline \verb'\+tcn'& template class (using \verb'new')        \hfill (n,i)\\
-\hline 
+\hline \verb'\+mi'  & method implementation                   \hfill (n,i)\\
+\hline \verb'\+ai'  & accessor implementation                 \hfill (n,i)\\
+\hline \verb'\+tc'  & template class                          \hfill (n,i)\\
+\hline \verb'\+tcn' & template class (using \verb'new')       \hfill (n,i)\\
 \hline \verb'\+tci' & template class  implementation          \hfill (n,i)\\
 \hline \verb'\+tcni'& template class (using \verb'new') impl. \hfill (n,i)\\
 \hline \verb'\+tmi' & template method implementation          \hfill (n,i)\\
 \hline \verb'\+tai' & template accessor implementation        \hfill (n,i)\\
-\hline 
-\hline \verb'\+tf' & template function                        \hfill (n,i)\\
-\hline \verb'\+ec' & error class                              \hfill (n,i)\\
-\hline \verb'\+tr' & \verb'try' \dots \verb'catch'            \hfill (n,v,i)\\
-\hline \verb'\+ca' & \verb'catch'                             \hfill (n,v,i)\\
-\hline \verb'\+c.' & \verb'catch(...)'                        \hfill (n,v,i)\\
+\hline \verb'\+tf'  & template function                       \hfill (n,i)\\
+\hline \verb'\+ec'  & error class                             \hfill (n,i)\\
+\hline \verb'\+tr'  & \verb'try' \dots \verb'catch'           \hfill (n,v,i)\\
+\hline \verb'\+ca'  & \verb'catch'                            \hfill (n,v,i)\\
+\hline \verb'\+c.'  & \verb'catch(...)'                       \hfill (n,v,i)\\
 \hline 
 %%----------------------------------------------------------------------
 %%  run menu
@@ -236,36 +248,107 @@ Key mappings for Vim with and without GUI.\\
 \hline \verb'\rm'  & run \texttt{make}                       \hfill (n,i)\\
 \hline \verb'\rg'  & cmd.\ line arg.\ for \texttt{make}      \hfill (n,i)\\
 %
-\hline 
-\hline \verb'\rp'  & run \texttt{splint}\footnotemark[1]     \hfill (n,i)\\
+\hline \verb'\rp'  & run \texttt{splint}$^1$     \hfill (n,i)\\
 \hline \verb'\ri'  & cmd.\ line arg.\ for \texttt{splint}    \hfill (n,i)\\
 %
-\hline \verb'\rk'  & run \texttt{CodeCheck}\footnotemark[2]  \hfill (n,i)\\
+\hline \verb'\rk'  & run \texttt{CodeCheck}$^2$  \hfill (n,i)\\
 \hline \verb'\re'  & cmd.\ line arg.\ for \texttt{CodeCheck} \hfill (n,i)\\
 %
-\hline 
 \hline \verb'\rd'  & run \texttt{indent}         \hfill (n,i,v)\\
 \hline \verb'\rh'  & hardcopy buffer             \hfill (n,i,v)\\
 \hline \verb'\rs'  & show plugin settings        \hfill (n,i)\\
 \hline \verb'\rx'  & set xterm size              \hfill (n,i, only Unix \& GUI)\\
 \hline \verb'\ro'  & change output destination   \hfill (n,i)\\
 \hline
+\end{tabular}
 %
 %%----------------------------------------------------------------------
 %%  load / unload menu entry
 %%----------------------------------------------------------------------
+\begin{tabular}[]{|p{12mm}|p{52mm}|}
 \hline
-\multicolumn{2}{|r|}{\textsl{Menu(s)}}\\
-\hline \verb'\lcs'  & Load    Menus\hfill \scriptsize{(n \& GUI only)}\\
-\hline \verb'\ucs'  & Unload  Menus\hfill \scriptsize{(n \& GUI only)}\\
-\hline
-\end{tabular} \\
+%\multicolumn{2}{|r|}{\textsl{Menu(s)}}\\
+%%----------------------------------------------------------------------
+%%  show plugin help
+%%----------------------------------------------------------------------
+%\hline 
+\multicolumn{2}{|r|}{\textsl{\textbf{H}elp and Menus}}\\
+\hline \verb'\hm'   & show manual   \hfill (n,i)\\
+\hline \verb'\hp'   & help (c-support) \hfill (n,i)\\
+\hline \verb'\lcs'  & load    Menus\hfill \scriptsize{(n \& GUI only)}\\
+\hline \verb'\ucs'  & unload  Menus\hfill \scriptsize{(n \& GUI only)}\\
+\hline 
+\end{tabular}
 %%~~~~~ TABULAR :  end  ~~~~~~~~~~
 %
-\footnotetext[1]{%
-\textbf{splint} must be installed ({www.splint.org}).}
-\footnotetext[2]{%
-\textbf{CodeCheck}  must be installed. CodeCheck$^{TM}$ is a product of Abraxas Software, Inc. }
+%
+\begin{minipage}[b]{66mm}%
+\vspace{10mm}
+%
+\begin{flushleft}
+%
+\textit{Ex commands:}
+\begin{description}
+%
+\item [CFileSection] 
+C/C++--file sections (same as \verb'\ccs')
+%
+\item [HFileSection]
+H--file sections (same as \verb'\chs')
+%
+\item [KeywordComment] 
+keyword comment (same as \verb'\ckc')
+%
+\item [SpecialComment] 
+special comment (same as \verb'\csc')
+%
+\item [IncludeStdLibrary] 
+standard library include (same as \verb'\ps')
+%
+\item [IncludeC99Library] 
+C99 include (same as \verb'\pc')
+%
+\end{description}
+%
+Use tab expansion to show the items to choose from.
+%
+\end{flushleft}
+%
+\end{minipage}\\
+%
+\begin{minipage}[b]{64mm}%
+\scriptsize{%
+\vspace{30mm}
+\hrulefill\\
+$^1$ {www.splint.org}\\
+$^2$ \textbf{CodeCheck}$^{TM}$ is a product of Abraxas Software, Inc.
+}%
+\end{minipage}\\
+%
+\begin{minipage}[b]{64mm}%
+
+\setlength{\fboxsep}{.25mm}
+%%----------------------------------------------------------------------
+%%  Additional Mappings
+%%----------------------------------------------------------------------
+\begin{spacing}{1.2}
+\begin{tabular}[]{|p{12mm}|p{56mm}|}
+\hline
+\multicolumn{2}{|r|}{\textsl{Additional Mappings}}\\
+\hline
+\hline \textbf{typing}   & \textbf{expansion}\\
+\hline \verb'/*'   		& \verb'/*  */'                          				            \hfill (i)\\
+\hline \verb'/*'   		& \verb'/* '\fbox{\small{(multiline) marked text}}\verb' */' 				\hfill (v)\\
+\hline \verb'/*<CR>'  & \verb'/*'\hfill (i)\newline\verb' * |'\newline\verb' */'\\
+\hline \verb'{<CR>'  	& \verb'{'\hfill (i)\newline\verb'  |'\newline\verb'}' 		\\
+\hline \verb'{<CR>'  	& \verb'{'\hfill (v)\newline\verb'  '\fbox{\small{(multiline) marked text}}\newline\verb'}'\\
+\hline 
+\end{tabular}
+\end{spacing}
+%%~~~~~ TABULAR :  end  ~~~~~~~~~~
+%
+\end{minipage}%
 %
 \end{center}
+\end{multicols}
 \end{document}
