--- a/perl-support/doc/perl-hot-keys.tex
+++ b/perl-support/doc/perl-hot-keys.tex
@@ -7,10 +7,10 @@
 %%                
 %%       Author:  Dr.-Ing. Fritz Mehner
 %%        Email:  mehner@fh-swf.de
-%%    Copyright:  Copyright (C)  2003-2009  Dr.-Ing. Fritz Mehner  (mehner@fh-swf.de)
+%%    Copyright:  Copyright (C)  2003-2010  Dr.-Ing. Fritz Mehner  (mehner@fh-swf.de)
 %%      Version:  see \Pluginversion
 %%      Created:  06.06.2003
-%%     Revision:  $Id: perl-hot-keys.tex,v 1.30 2009/10/04 11:33:20 mehner Exp $
+%%     Revision:  $Id: perl-hot-keys.tex,v 1.38 2010/12/07 19:47:20 mehner Exp $
 %%                
 %%=====================================================================================
 
@@ -25,8 +25,8 @@
 
 \setlength\parindent{0pt}
 
-\newcommand{\Pluginversion}{4.5}
-\newcommand{\ReleaseDate}{ October 2009}
+\newcommand{\Pluginversion}{4.9}
+\newcommand{\ReleaseDate}{December 2010}
 
 %%----------------------------------------------------------------------
 %%  fancyhdr
@@ -88,7 +88,7 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%  show plugin help
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{\textbf{L}oad / \textbf{U}nload Perl Support}}\\
+\multicolumn{2}{|r|}{\textsl{\textbf{L}oad / \textbf{U}nload Perl Support}}\\[1.0ex]
 \hline \verb'\lps'  & load menues  \hfill (n) \\
 \hline \verb'\ups'  & unload menues\hfill (n) \\
 \hline
@@ -96,14 +96,14 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%  show plugin help
 %%----------------------------------------------------------------------
 \hline 
-\multicolumn{2}{|r|}{\textsl{\textbf{H}elp}}    \\
+\multicolumn{2}{|r|}{\textsl{\textbf{H}elp}}    \\[1.0ex]
 \hline \verb'\hp'   & help (plugin) \hfill (n,i)\\
 \hline 
 %%----------------------------------------------------------------------
 %%  menu comments
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{\textbf{C}omments}}                       \\
+\multicolumn{2}{|r|}{\textsl{\textbf{C}omments}}                       \\[1.0ex]
 \hline \verb'\cl'   & end-of-line comment               \hfill (n, v, i)\\
 \hline \verb'\cj'   & adjust end-of-line comments       \hfill (n, v, i)\\
 \hline \verb'\cs'   & set end-of-line comment col.      \hfill (n)      \\
@@ -135,37 +135,38 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%======================================================================
 %
 %%~~~~~ TABULAR : begin ~~~~~~~~~~
-\begin{tabular}[]{|p{13mm}|p{56mm}|}
+\begin{tabular}[]{|p{18mm}|p{49mm}|}
 %%----------------------------------------------------------------------
 %%  menu statements
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{\textbf{S}tatements}}                     \\
-\hline \verb'\sd'  & \verb'do { } while'               \hfill (n, v, i)\\
-\hline \verb'\sf'  & \verb'for { }'                    \hfill (n, v, i)\\
-\hline \verb'\sfe' & \verb'foreach { }'                \hfill (n, v, i)\\
-\hline \verb'\si'  & \verb'if { }'                     \hfill (n, v, i)\\
-\hline \verb'\sie' & \verb'if { } else { }'            \hfill (n, v, i)\\
-\hline \verb'\se'  & \verb'else { }'                   \hfill (n, v, i)\\
-\hline \verb'\sei' & \verb'elsif { }'                  \hfill (n, v, i)\\
-\hline \verb'\su'  & \verb'unless { }'                 \hfill (n, v, i)\\
-\hline \verb'\sue' & \verb'unless { } else { }'        \hfill (n, v, i)\\
-\hline \verb'\st'  & \verb'until { }'                  \hfill (n, v, i)\\
-\hline \verb'\sw'  & \verb'while { }'                  \hfill (n, v, i)\\
-\hline \verb'\s{ \sb'  & \verb'{ }'                        \hfill (n, v, i)\\
+\multicolumn{2}{|r|}{\textsl{\textbf{S}tatements}}                    \\[1.0ex]
+\hline \verb'\sd'      & \verb'do { } while'          \hfill (n, v, i)\\
+\hline \verb'\sf'      & \verb'for { }'               \hfill (n, v, i)\\
+\hline \verb'\sfe'     & \verb'foreach { }'           \hfill (n, v, i)\\
+\hline \verb'\si'      & \verb'if { }'                \hfill (n, v, i)\\
+\hline \verb'\sie'     & \verb'if { } else { }'       \hfill (n, v, i)\\
+\hline \verb'\se'      & \verb'else { }'              \hfill (n, v, i)\\
+\hline \verb'\sei'     & \verb'elsif { }'             \hfill (n, v, i)\\
+\hline \verb'\su'      & \verb'unless { }'            \hfill (n, v, i)\\
+\hline \verb'\sue'     & \verb'unless { } else { }'   \hfill (n, v, i)\\
+\hline \verb'\st'      & \verb'until { }'             \hfill (n, v, i)\\
+\hline \verb'\sw'      & \verb'while { }'             \hfill (n, v, i)\\
+\hline \verb'\s{ \sb'  & \verb'{ }'                   \hfill (n, v, i)\\
 \hline
 %%----------------------------------------------------------------------
 %%  menu idioms
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{\textbf{I}dioms}}                 \\
-\hline \verb'\$'   & \verb'my $;'              \hfill (n, i)   \\
-\hline \verb'\$='  & \verb'my $ = ;'           \hfill (n, i)   \\
-\hline \verb'\$$'  & \verb'my ( $, $ );'       \hfill (n, i)   \\
-\hline \verb'\@'   & \verb'my @;'              \hfill (n, i)   \\
-\hline \verb'\@='  & \verb'my @ = (,,);'       \hfill (n, i)   \\
-\hline \verb'\%'   & \verb'my %;'              \hfill (n, i)   \\
-\hline \verb'\%='  & \verb'my % = (=>,=>,);'   \hfill (n, i)   \\
+\multicolumn{2}{|r|}{\textsl{\textbf{I}dioms}}                 \\[1.0ex]
+\hline \verb'\id  ' [\verb'\$ ']  & \verb'my $;'              \hfill (n, i)   \\
+\hline \verb'\id= ' [\verb'\$=']  & \verb'my $ = ;'           \hfill (n, i)   \\
+\hline \verb'\idd ' [\verb'\$$']  & \verb'my ( $, $ );'       \hfill (n, i)   \\
+\hline \verb'\ia  ' [\verb'\@ ']  & \verb'my @;'              \hfill (n, i)   \\
+\hline \verb'\ia= ' [\verb'\@=']  & \verb'my @ = (,,);'       \hfill (n, i)   \\
+\hline \verb'\ih  ' [\verb'\% ']  & \verb'my %;'              \hfill (n, i)   \\
+\hline \verb'\ih= ' [\verb'\%=']  & \verb'my % = (=>,=>,);'   \hfill (n, i)   \\
+%
 \hline \verb'\ir'  & \verb'my $rgx_ = q//;'    \hfill (n, i)   \\
 \hline \verb'\im'  & \verb'$ =~ m//xm'         \hfill (n, i)   \\
 \hline \verb'\is'  & \verb'$ =~ s///xm'        \hfill (n, i)   \\
@@ -181,13 +182,13 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%  snippet menu
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{S\textbf{n}ippet}}             \\
+\multicolumn{2}{|r|}{\textsl{S\textbf{n}ippet}}             \\[1.0ex]
 \hline \verb'\nr'  & read code snippet         \hfill (n)   \\
 \hline \verb'\nw'  & write code snippet        \hfill (n, v)\\
 \hline \verb'\ne'  & edit code snippet         \hfill (n)   \\
 %
 \hline \verb'\ntl' & edit local templates      \hfill (n)   \\
-\hline \verb'\ntg' & edit global templates     \hfill (n)   \\
+\hline \verb'\ntg' & edit global templates$^1$ \hfill (n)   \\
 \hline \verb'\ntr' & reread the templates      \hfill (n)   \\
 \hline
 \end{tabular}\\
@@ -203,7 +204,7 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%  menu regex menu
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{Regular E\textbf{x}pressions}} \\
+\multicolumn{2}{|r|}{\textsl{Regular E\textbf{x}pressions}}     \\[1.0ex]
 \hline \verb'\xr' &  pick up Regex                 \hfill (n, v)\\
 \hline \verb'\xs' &  pick up string                \hfill (n, v)\\
 \hline \verb'\xf' &  pick up flag(s)               \hfill (n, v)\\
@@ -215,7 +216,7 @@ Fritz Mehner (mehner@fh-swf.de)\\
 %%  menu Posix character classes
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{\textbf{P}OSIX Character Classes}}\\
+\multicolumn{2}{|r|}{\textsl{\textbf{P}OSIX Character Classes}}\\[1.0ex]
 \hline \verb'\pa' &  \verb'[:alnum:] '         \hfill (n, i)   \\
 \hline \verb'\ph' &  \verb'[:alpha:] '         \hfill (n, i)   \\
 \hline \verb'\pi' &  \verb'[:ascii:] '         \hfill (n, i)   \\
@@ -232,41 +233,78 @@ Fritz Mehner (mehner@fh-swf.de)\\
 \hline \verb'\px' &  \verb'[:xdigit:]'         \hfill (n, i)   \\
 \hline
 %%----------------------------------------------------------------------
-%%  menu run
+%%  menu POD
 %%----------------------------------------------------------------------
 \hline
-\multicolumn{2}{|r|}{\textsl{\textbf{R}un}} \\
-\hline \verb'\rr'    & update file, run script              \hfill (n)   \\
-\hline \verb'\rs'    & update file, check syntax            \hfill (n)   \\
-\hline \verb'\ra'    & set command line arguments           \hfill (n)   \\
-\hline \verb'\rw'    & set Perl cmd.\ line switches         \hfill (n)   \\
-\hline \verb'\rd'    & start debugger                       \hfill (n)   \\
-\hline \verb'\re'    & make script executable               \hfill (n)   \\
-\hline \verb'\rp \h' & read perldoc for word under cursor   \hfill (n)   \\
-\hline \verb'\ri'    & show installed Perl modules          \hfill (n)   \\
-\hline \verb'\rg'    & generate Perl module list            \hfill (n)   \\
-\hline \verb'\ry'    & run \verb'perltidy'                  \hfill (n, v)\\
-\hline \verb'\rps'   & run \verb'Devel::SmallProf'          \hfill (n)   \\
-\hline \verb'\rpf'   & run \verb'Devel::FastProf'           \hfill (n)   \\
-\hline \verb'\rpn'   & run \verb'Devel::NYTProf'            \hfill (n)   \\
-\hline \verb'\rc'    & run \verb'perlcritic'                \hfill (n)   \\
-\hline \verb'\rt'    & save buffer with timestamp           \hfill (n)   \\
-\hline \verb'\rh'    & hardcopy buffer                      \hfill (n, v)\\
-\hline \verb'\rk'    & settings and hotkeys                 \hfill (n)   \\
-\hline \verb'\rx'    & set xterm size                       \hfill (n, {\tiny GUI only})\\
-\hline \verb'\ro'    & change output destination            \hfill (n)   \\
+\multicolumn{2}{|r|}{\textsl{\textbf{P}OD}}                       \\[1.0ex]
+\hline \verb'\pod'    & run \verb'podchecker'           \hfill (n)\\
+\hline \verb'\podh'   & convert POD data to .html file  \hfill (n)\\
+\hline \verb'\podm'   & Convert POD data to *roff input \hfill (n)\\
+\hline \verb'\podt'   & Convert POD data to ASCII text  \hfill (n)\\
 \hline
-\end{tabular}%
+%%----------------------------------------------------------------------
+%%  menu Profiling
+%%----------------------------------------------------------------------
+\hline
+\multicolumn{2}{|r|}{\textsl{\textbf{P}rofiling}}                 \\[1.0ex]
+\hline \verb'\rps'    & run \verb'SmallProf'            \hfill (n)\\
+\hline \verb'\rpf'    & run \verb'FastProf'             \hfill (n)\\
+\hline \verb'\rpn'    & run \verb'NYTProf'              \hfill (n)\\
+\hline \verb'\rpnc'   & open CSV file (\verb'NYTProf')  \hfill (n)\\
+\hline
+\end{tabular}\\
 %%~~~~~ TABULAR :  end  ~~~~~~~~~~
+%
+\begin{minipage}[b]{75mm}%
+\scriptsize{%
+\vspace{10mm}
+\hrulefill\\
+$^1$ {systemwide installation only}\\
+}%
+\end{minipage}\\
 %
 \end{center}%
 \end{multicols}%
+%
 \newpage
+%%----------------------------------------------------------------------
+%%  PAGE 2
+%%----------------------------------------------------------------------
 %
 %
 \begin{multicols}{2}
 %
-\parbox[t][50mm][t]{120mm}{%
+%%~~~~~ TABULAR : begin ~~~~~~~~~~
+\begin{tabular}[]{|p{11mm}|p{58mm}|}
+%%----------------------------------------------------------------------
+%%  menu run
+%%----------------------------------------------------------------------
+\hline
+\multicolumn{2}{|r|}{\textsl{\textbf{R}un}} \\[1.0ex]
+\hline \verb'\rr'    & update file, run script                  \hfill (n)   \\
+\hline \verb'\rs'    & update file, check syntax                \hfill (n)   \\
+\hline \verb'\ra'    & set command line arguments               \hfill (n)   \\
+\hline \verb'\rw'    & set Perl cmd.\ line switches             \hfill (n)   \\
+\hline \verb'\rm'    & run \texttt{make}                        \hfill (n)   \\
+\hline \verb'\rma'   & command line arguments for \texttt{make} \hfill (n)   \\
+\hline \verb'\rd'    & start debugger                           \hfill (n)   \\
+\hline \verb'\re'    & make script executable                   \hfill (n)   \\
+\hline \verb'\rp \h' & read perldoc for word under cursor       \hfill (n)   \\
+\hline \verb'\ri'    & show installed Perl modules              \hfill (n)   \\
+\hline \verb'\rg'    & generate Perl module list                \hfill (n)   \\
+\hline \verb'\ry'    & run \verb'perltidy'                      \hfill (n, v)\\
+\hline \verb'\rc'    & run \verb'perlcritic'                    \hfill (n)   \\
+\hline \verb'\rt'    & save buffer with timestamp               \hfill (n)   \\
+\hline \verb'\rh'    & hardcopy buffer                          \hfill (n, v)\\
+\hline \verb'\rk'    & settings and hotkeys                     \hfill (n)   \\
+\hline \verb'\rx'    & set xterm size                           \hfill (n, {\tiny GUI only})\\
+\hline \verb'\ro'    & change output destination                \hfill (n)   \\
+\hline
+\end{tabular}%
+%%~~~~~ TABULAR :  end  ~~~~~~~~~~
+%
+
+\parbox[t][70mm][t]{120mm}{%
 %
 \begin{tabbing}
 \hspace{30mm} \= \hspace{50mm} \= \kill
@@ -283,12 +321,6 @@ Use tab expansion to choose the severity or the verbosity.\\[2.0ex]
 \texttt{ :CriticVerbosity} \> \texttt{1} $\ldots$ \texttt{11}\\[1.0ex]
 \texttt{ :CriticOptions}   \> option(s), see \texttt{perlcritic(1)}\\[5.5ex]
 %
-\end{tabbing}%
-}\\
-%
-\parbox[t][70mm][t]{120mm}{%
-%
-\begin{tabbing}
 \hspace{30mm} \= \hspace{50mm} \= \kill
 %
 %%----------------------------------------------------------------------
